ensure flexbox container for skills icons and text are left-aligned
the rest of the copy are all left aligned, especially the heading 'skills' so having it be in the centre of the page doesn't look right

--- a/style.css
+++ b/style.css
@@ -107,19 +107,18 @@ header a:hover,
 
 /* "Skills" section */
 .skills article {
-    min-width: 90%;
+    width: 85%;
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
     padding-right: 20px;
 }
 
 .icon-container {
-    flex: 1 1 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
     gap: 12px;
     padding: 1rem 0;
 }
